@@ -159,7 +159,8 @@ Completion for fish shell by Hoang Nguyen (a.k.a. FollieHiyuki).
 
 Alexandr Keyp (a.k.a. IAmKapuze) contributed improvements for :compare.
 
-高浩亮 (a.k.a. haolian9) enabled mouse handling.
+高浩亮 (a.k.a. haolian9) enabled mouse handling and fixed displaying of
+foreign commands in `:commands {prefix}`.
 
 Zhipeng Xue fixed a couple of potential NULL dereferences.
 
